Prevent card text from jumping

--- a/src/sass/partials/view/_answerside.scss
+++ b/src/sass/partials/view/_answerside.scss
@@ -5,7 +5,6 @@
       width: 100%;
       height: 100%;
       font-size: 4em;
-      padding-bottom: 76px;
       box-sizing: border-box;
    }
    .answer div {
@@ -17,22 +16,25 @@
       left: 0;
       bottom: 0;
       right: 0;
-      height: 76px;
+      height: 80px;
       font-size: 3.5em;
       text-align: center;
       padding-bottom: 40px;
    }
    .outcome-button {
-      padding: 0 40px;
-      margin: 0 14px;
+      padding: 40px;
+      position: absolute;
+      bottom: 0;
    }
    .wrong {
+      right: 20%;
       color: $color-wrong-text;
       &:hover, &:active {
          color: $color-wrong-text--hover;
       }
    }
    .correct {
+      left: 20%;
       color: $color-correct-text;
       &:hover, &:active {
          color: $color-correct-text--hover;
